Fix close tooltip on Safari.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -539,7 +539,7 @@ div.cmail-outer {
 
           &.long-tooltip {
             .tooltip {
-              width: 86px;
+              width: 90px;
               // margin-left: -24px;
             }
           }
